# insect-logger

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md
include/itst/: ConsoleLogger.h  Core.h  FileLogger.h  LogSeverity.def  LogSeverity.h  Logger.hpp  LoggerBase.h  Macros.h  StringLogger.h
include/itst/common/: ErrorHandling.h  StringSwitch.h  TemplateString.h  TypeTraits.h
include/itst/common/detail/: TypeTraitsCXX17.h  TypeTraitsCXX20.h
sample/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  FileLogger.cpp  LogSeverity.cpp  LoggerBase.cpp  StringLogger.cpp
src/common/: ErrorHandling.cpp
